[project]
name = "perplexity-export-convert"
version = "0.0.1"
description = "Convert GDPR Perplexity conversations export into markdown files"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
perplexity-export-convert = "perplexity-export-convert:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
